--- a/about.html
+++ b/about.html
@@ -8,14 +8,20 @@
     <title>About</title>
 </head>
 <body>
-    <nav>
-        <h1>About!</h1>
-        <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./about.html">About</a></li>
-            <li><a href="./contact.html">Contact</a></li>
-            <li><a href="./order.html">Order</a></li>
-        </ul>
+    <nav id="about-nav">
+        <div>
+            <h1>About us!</h1>
+        </div>
+        <div>
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="./order.html">Order</a></li>
+            </ul>
+        </div>
+        
     </nav>
+    <hr>
 </body>
 </html>
