--- a/index.html
+++ b/index.html
@@ -8,15 +8,25 @@
     <title>Home</title>
 </head>
 <body>
-    <nav>
-        <h1>Pizza parlor</h1>
-        <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./about.html">About</a></li>
-            <li><a href="./contact.html">Contact</a></li>
-            <li><a href="./order.html">Order</a></li>
-        </ul>
+    <nav id="home-nav">
+        <div>
+            <h1>Jords Pizza Parlor</h1>
+        </div>
+        <div>
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="./order.html">Order</a></li>
+            </ul>
+        </div>
+        
     </nav>
-    
+    <hr>
+    <main>
+        <div class="home-bio">
+            <p>Welcome to Jords Pizza Parlor!</p>
+        </div>
+    </main>
 </body>
 </html>
