--- a/about.html
+++ b/about.html
@@ -23,5 +23,15 @@
         
     </nav>
     <hr>
+    <main>
+        <div class="about-bio">
+            <p>Since 2022 We have been making the best pizza! </p>
+            <p>We started out with just one parlor now we are everywhere you could think!</p>
+            <p>Order and see for your self how good the pizza is!</p>
+        </div>
+        <div id="about-img">
+            <img height="400" width="500" src="./assets/about-img.png" alt="firepizza" />
+        </div>
+    </main>
 </body>
 </html>
