--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <div class="home-bio">
             <p>Welcome to Jords Pizza Parlor!</p>
         </div>
+        <div id="home-img">
+            <img height="600" width="600" src="./assets/home-img.png" alt="home" />
+        </div>
     </main>
 </body>
 </html>
