--- a/order.html
+++ b/order.html
@@ -24,6 +24,9 @@
         
     </nav>
     <hr>
+    <div id="order-p-div">
+        <p>Order here! all pizzas are made with original ingredients</p>
+    </div>
     <!-- end of nav -->
     <!-- form start -->
     <form method="post"  action="https://www.stonecoldprofessor.com/pizza-order.php">
