--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,9 @@
     <hr>
     <!-- form -->
    
-  
+    <div id="contact-container">
+        <p>Please contact us about any questions or inquirys you may have!</p>
+    </div>
     <div class="contact-form">
         
         <form action="https://www.stonecoldprofessor.com/pizza-contact.php" method="POST">
